fix contact overlap (PROD)

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -159,15 +159,13 @@
 }
 
 .footer {
-    background-image: url('./images/cards.jpg');
-    background-position: right top;
-    background-size: 86%;
+    background: #ccc url('./images/cards.jpg') no-repeat center 120px;
+    background-size: cover;
 
     &__box {
         display: flex;
         flex-direction: column;
         height: 100vh;
-        max-width: 250px;
         padding: 8vw 5vw 5vw;
 
         @include desktop {
@@ -177,13 +175,7 @@
         .contact {
             margin-top: 40px;
             padding: 5px;
-            background-color: hsla(0, 0%, 80%, .18);
-            line-height: 24px;
-
-            @include mobile {
-                font-size: 2.5vw;
-                line-height: 5vw;
-            }
+            font-size: 18px;
 
             &__email {
                 background: url('./images/mail.svg') no-repeat;
@@ -191,11 +183,7 @@
                 display: block;
                 margin-bottom: 20px;
                 padding-left: 35px;
-
-                @include mobile {
-                    font-size: 13px;
-                    line-height: 20px;
-                }
+                white-space: nowrap;
             }
 
             &__phone {
@@ -204,11 +192,7 @@
                 display: block;
                 margin-bottom: 20px;
                 padding-left: 35px;
-
-                @include mobile {
-                    font-size: 13px;
-                    line-height: 20px;
-                }
+                white-space: nowrap;
             }
 
             &__btn {
@@ -296,10 +280,13 @@
     }
 
     &__email {
+        border: 1px solid $black;
         height: 30px;
+        margin-bottom: 5px;
     }
 
     &__message {
+        border: 1px solid $black;
         height: 200px;
     }
 
